First Commit - By Nicholas Wong

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Food 2 Go</string>
+    <string name="intro_title">Your Solution for better food experience</string>
 </resources>
